# houston

./: .gitignore  README.md  _project.md  pyproject.toml
apps/edge/: pyproject.toml
apps/edge/src/houston_edge/: adcs.py  artifacts.py  bridge.py  camera.py  config.py  ground_client.py  main.py  payloads.py  pipeline.py  processing.py  runtime.py  runtime_status.py  service.py  spool.py  uploads.py
apps/edge/tests/: test_bridge.py  test_processing.py
apps/ground/: pyproject.toml
apps/ground/src/houston_ground/: captures.py  config.py  db.py  devices.py  events.py  hubs.py  main.py  sqlite.py  storage.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: App.tsx  index.css  styles.css  types.ts
apps/web/src/components/: ProtectedRoute.tsx
apps/web/src/components/captures/: CaptureComparison.tsx  CaptureDiffViewer.tsx  LiveHistoryViewer.tsx  MatrixHeatmap.tsx
apps/web/src/components/ui/: badge.tsx  scroll-area.tsx
apps/web/src/contexts/: AuthContext.tsx  TelemetryContext.tsx
apps/web/src/lib/: device-runtime.ts  link-metrics.ts  runtime-url.ts
apps/web/src/pages/: Captures.tsx  Devices.tsx  Events.tsx  Layout.tsx  Login.tsx  Overview.tsx  Settings.tsx
docs/: architecture.md
scripts/: bootstrap.ps1  bootstrap.sh  dev-all.sh  dev-edge.sh  dev-ground.ps1  dev_up.py  prepare-venv.sh
var-smoke/edge/spool/pending/20260314T212258-c2eec3/: 20260314T212258-c2eec3_matrix.npy  manifest.json  (+1 more)
var-smoke/ground/: houston.db
var-smoke2/ground/: houston.db
var/edge/spool/: bridge_state.json
(+903 files in other folders)
