[project]
name = "houston-edge"
version = "0.1.0"
description = "Edge capture and telemetry service for Houston"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.118.0",
  "httpx>=0.28.1",
  "numpy>=2.3.3",
  "opencv-python-headless>=4.12.0.88",
  "pydantic-settings>=2.11.0",
  "uvicorn>=0.37.0",
  "websockets>=15.0.1",
  "houston-protocol",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
